--- a/test/core/unitTests.html
+++ b/test/core/unitTests.html
@@ -132,6 +132,10 @@
         </span>
       </p>
     </div>
+    <div id="defineUniqueSelector-1">
+      <p>First paragraph</p>
+      <p>Second paragraph
+    </div>
     <script src="../testrunner.js"></script>
     <script>
     (function(global) {
@@ -168,6 +172,12 @@
           ok(quail.containsReadableText($('#containsReadableText-4'), true), 'Nested element with alt attribute is readable');
           ok(!quail.containsReadableText($('#containsReadableText-5'), true), 'Nested elements with no text is not readable');
           ok(!quail.containsReadableText($('#containsReadableText-6'), true), 'Nested elements with no text is not readable');
+        });
+
+        test('quail.defineUniqueSelector', function() {
+          equal(quail.defineUniqueSelector($('#defineUniqueSelector-1').get(0)), '#defineUniqueSelector-1', 'ID-based selector was found');
+          equal(quail.defineUniqueSelector($('#defineUniqueSelector-1 p').get(0)), '#defineUniqueSelector-1 p', 'Descendent selector was found');
+          equal(quail.defineUniqueSelector($('a img').get(0)), '#containsReadableText-2 img', 'Descendent selector was found');
         });
       };
     })(this);
