--- a/test/accessibility-tests/scriptOnclickRequiresOnKeypress.html
+++ b/test/accessibility-tests/scriptOnclickRequiresOnKeypress.html
@@ -13,7 +13,24 @@
 	</div>
 
 	<div class="quail-test" data-expected="pass" data-accessibility-test="scriptOnclickRequiresOnKeypress">
-		<input name="num" onclick="'foo';" onkeypress="'bar';" value="0"></div>
+		<input name="num" onclick="'foo';" onkeypress="'bar';" value="0">
+	</div>
+
+	<div class="quail-test" data-expected="fail" data-accessibility-test="scriptOnclickRequiresOnKeypress">
+		<a onclick="'foo';" class="quail-failed-element" href="scriptOnclickRequiresOnKeypress.html">A link!</a>
+	</div>
+
+	<div class="quail-test" data-expected="fail" data-accessibility-test="scriptOnclickRequiresOnKeypress">
+		<a type="text" class="quail-failed-element" href="scriptOnclickRequiresOnKeypress.html">A link!</a>
+	</div>
+
+	<div class="quail-test" data-expected="pass" data-accessibility-test="scriptOnclickRequiresOnKeypress">
+		<a onclick="'foo';" onkeypress="'bar';" href="scriptOnclickRequiresOnKeypress.html">A link!</a>
+	</div>
+
+		<div class="quail-test" data-expected="pass" data-accessibility-test="scriptOnclickRequiresOnKeypress">
+		<a href="scriptOnclickRequiresOnKeypress.html">A link!</a>
+	</div>
 
 	<script src="../testrunner.js"></script>
 </body>
