--- a/test/accessibility-tests/languageChangesAreIdentified.html
+++ b/test/accessibility-tests/languageChangesAreIdentified.html
@@ -20,6 +20,16 @@
         <p>This paragraph is just fine, it is written in English.</p>
         <p class="bengali quail-failed-element">এটি একটি ভাষা একক স্ক্রিপ্ট করা হবে না.</p>
     </div>
+
+
+    <div class="quail-test" data-expected="fail" data-accessibility-test="languageChangesAreIdentified" lang="en">
+        <p>
+            This paragraph is just fine, but the paragraph after it is in French. Monotonectally exploit web-enabled leadership skills rather than standards compliant markets. Appropriately visualize process-centric human capital via equity invested scenarios. Continually deploy magnetic communities whereas pandemic potentialities. 
+        </p>
+        <p class="quail-failed-element">
+            Ceci est un texte français. Il est maintenant temps pour tous les hommes à venir à l'aide de leur pays. Exploiter Monotonectally compétences en leadership web-enabled plutôt que des normes conformes marchés. Visualiser correctement le capital humain centrée sur les processus par actions investi scénarios. Déployer continuellement communautés magnétiques alors que les potentialités en cas de pandémie.
+        </p>
+    </div>
     
     <div class="quail-test" data-expected="pass" data-accessibility-test="languageChangesAreIdentified">
         <p>
@@ -29,10 +39,10 @@
         </p>
     </div>
     <div class="quail-test" data-expected="pass" data-accessibility-test="languageChangesAreIdentified">
-        <p>This paragraph is just fine, it is written in English.</p>
+        <p>This paragraph is just fine, it is written in English. Monotonectally exploit web-enabled leadership skills rather than standards compliant markets. Appropriately visualize process-centric human capital via equity invested scenarios. Continually deploy magnetic communities whereas pandemic potentialities. </p>
         <p lang="ar">هذا هو مكتوب باللغة العربية</p>
     </div>
-    <div class="quail-test" data-expected="pass" data-accessibility-test="languageChangesAreIdentified">
+    <div class="quail-test" data-expected="pass" data-accessibility-test="languageChangesAreIdentified" lang="fr">
         <p>Ceci est un paragraphe en français.</p>
         <p lang="es">
             Este es un párrafo en español, traductor Google ha sido muy útil.
@@ -43,11 +53,12 @@
             mots japonais ainsi
         </p>
     </div>
-    <div class="quail-test" data-expected="pass" data-accessibility-test="languageChangesAreIdentified">
-        <p>This paragraph is just fine, it is written in English.</p>
+    <div class="quail-test" data-expected="pass" data-accessibility-test="languageChangesAreIdentified" lang="en">
+        <p>This paragraph is just fine, it is written in English. Monotonectally exploit web-enabled leadership skills rather than standards compliant markets. Appropriately visualize process-centric human capital via equity invested scenarios. Continually deploy magnetic communities whereas pandemic potentialities. </p>
         <p lang="bn">এটি একটি ভাষা একক স্ক্রিপ্ট করা হবে না.</p>
     </div>
-
+    <script src="../../lib/guessLanguage/lib/_languageData.js"></script>
+    <script src="../../lib/guessLanguage/lib/guessLanguage.js"></script>
     <script src="../testrunner.js"></script>
 </body>
 </html>
