--- a/test/assessmentSpecs/specs/aInPHasADistinctStyle/aInPHasADistinctStyle.html
+++ b/test/assessmentSpecs/specs/aInPHasADistinctStyle/aInPHasADistinctStyle.html
@@ -23,62 +23,62 @@
   </head>
   <body>
     <div>
-      <p><a href="">A link</a></p>
+      <p><a id="assert-1" href="">A link</a></p>
     </div>
 
     <div>
-      <p>Some text <a>with no link</a> inside it.</p>
+      <p>Some text <a id="assert-2">with no link</a> inside it.</p>
     </div>
 
     <div>
-      <p>Some text <a href="" style="display:none">with no link</a> inside it.</p>
+      <p>Some text <a id="assert-3" href="" style="display:none">with no link</a> inside it.</p>
     </div>
 
     <div>
-      <div style="display:none"><p>No text <a href="/">with no link</a> inside it.</p></div>
+      <div style="display:none"><p>No text <a id="assert-4" href="/">with no link</a> inside it.</p></div>
     </div>
 
     <div>
-      <p>Some text with an empty link <a href="/"></a> inside it.</p>
+      <p>Some text with an empty link <a id="assert-5" href="/"></a> inside it.</p>
     </div>
 
     <div>
-      <p>Some text <a href="/" style="text-decoration:underline">With a link</a> inside it.</p>
+      <p>Some text <a id="assert-6" href="/" style="text-decoration:underline">With a link</a> inside it.</p>
     </div>
 
     <div>
-      <p>Some text <a href="/" style="display:block; margin:1em;"> With a link</a> inside it.</p>
+      <p>Some text <a id="assert-7" href="/" style="display:block; margin:1em;"> With a link</a> inside it.</p>
     </div>
 
     <div>
-      <p>Some text <a href="/" style="position:absolute; top:-1em; right:0;">With a link</a></p>
+      <p>Some text <a id="assert-8" href="/" style="position:absolute; top:-1em; right:0;">With a link</a></p>
     </div>
 
     <div>
-      <p>Some text <a href="/" style="border-bottom:dashed 1px red">With a link</a> inside it.</p>
+      <p>Some text <a id="assert-9" href="/" style="border-bottom:dashed 1px red">With a link</a> inside it.</p>
     </div>
 
     <div>
       <!-- links with images are probably sufficiently distinguishable -->
-      <p>Some text <a href="/">With a link <img src="" alt=""/></a> inside it.</p>
+      <p>Some text <a id="assert-10" href="/">With a link <img src="" alt=""/></a> inside it.</p>
     </div>
 
     <div>
       <!-- If the link is the only content of an element with a destinct still, it also passes -->
-      <p>Some text <span style="background:blue"><a href="/" style="text-decoration:underline">With a link</a></span> inside it.</p>
+      <p>Some text <span style="background:blue"><a id="assert-11" href="/" style="text-decoration:underline">With a link</a></span> inside it.</p>
     </div>
 
     <div>
       <!--The above is also true when it comes from native style changes -->
-      <p>Some text <strong><a href="/">With a link</a> </strong>, <em><a href="/">With a link</a></em> - <b><a href="/">With a link</a></b>  ==== <u><a href="/">With a link</a></u> / inside it.</p>
+      <p>Some text <strong><a id="assert-12" href="/">With a link</a> </strong>, <em><a id="assert-13" href="/">With a link</a></em> - <b><a id="assert-14" href="/">With a link</a></b>  ==== <u><a id="assert-15" href="/">With a link</a></u> / inside it.</p>
     </div>
 
     <div>
-      <p>Some text <a href="/" class="quail-failed-element">With a link</a> inside it.</p>
+      <p>Some text <a id="assert-16" href="/" class="quail-failed-element">With a link</a> inside it.</p>
     </div>
 
     <div>
-      <p style="text-decoration:underline">Some text <a href="/" class="quail-failed-element">With a link</a> inside it.</p>
+      <p style="text-decoration:underline">Some text <a id="assert-17" href="/" class="quail-failed-element">With a link</a> inside it.</p>
     </div>
   </body>
 </html>
