--- a/test/assessmentSpecs/specs/pNotUsedAsHeader/pNotUsedAsHeader.html
+++ b/test/assessmentSpecs/specs/pNotUsedAsHeader/pNotUsedAsHeader.html
@@ -1,59 +1,71 @@
 <!doctype html>
 <html>
-<head>
+  <head>
     <title>pNotUsedAsHeader</title>
-</head>
-<body>
-    <div class="quail-test" data-expected="fail" data-accessibility-test="pNotUsedAsHeader">
-        <p class="quail-failed-element"> <b>Looks like a header</b>
-        </p>
+    <style type="text/css">
+      blockquote.styled {
+        font-style: italic;
+        font-family: Georgia, Times, "Times New Roman", serif;
+      }
+    </style>
+  </head>
+  <body>
+    <div data-expected="fail">
+      <p class="quail-failed-element"><b>Looks like a header</b></p>
     </div>
 
-    <div class="quail-test" data-expected="fail" data-accessibility-test="pNotUsedAsHeader">
-        <p class="quail-failed-element"> <i>Looks like a header</i>
-        </p>
+    <div data-expected="fail">
+      <p class="quail-failed-element"><i>Looks like a header</i></p>
     </div>
 
-    <div class="quail-test" data-expected="fail" data-accessibility-test="pNotUsedAsHeader">
-        <p class="quail-failed-element"> <u>Looks like a header</u>
-        </p>
+    <div data-expected="fail">
+      <p class="quail-failed-element"><u>Looks like a header</u></p>
     </div>
 
-    <div class="quail-test" data-expected="fail" data-accessibility-test="pNotUsedAsHeader">
-        <p class="quail-failed-element"> <font>Looks like a header</font>
-        </p>
+    <div data-expected="fail">
+      <p class="quail-failed-element"><font>Looks like a header</font></p>
     </div>
 
-    <div class="quail-test" data-expected="fail" data-accessibility-test="pNotUsedAsHeader">
-        <p class="quail-failed-element"> <em>Looks like a header</em>
-        </p>
+    <div data-expected="fail">
+      <p class="quail-failed-element"><em>Looks like a header</em></p>
     </div>
 
-    <div class="quail-test" data-expected="fail" data-accessibility-test="pNotUsedAsHeader">
-        <p class="quail-failed-element" style="font-weight: bold;">Looks like a header</p>
+    <div data-expected="fail">
+      <p class="quail-failed-element" style="font-weight: bold;">Looks like a header</p>
     </div>
 
-    <div class="quail-test" data-expected="fail" data-accessibility-test="pNotUsedAsHeader">
-        <p class="quail-failed-element"> <strong>Looks like a header</strong>
-        </p>
+    <div data-expected="fail">
+      <p class="quail-failed-element"><strong>Looks like a header</strong></p>
     </div>
 
-    <div class="quail-test" data-expected="pass" data-accessibility-test="pNotUsedAsHeader">
-        <p>
-            Nobis nulla sollemnes assum est volutpat. Et ii wisi hendrerit saepius
-                duis.
-        </p>
-        <p>Looks like a header, but it's not.</p>
-        <p>
-            Nobis nulla sollemnes assum est volutpat. Et ii wisi hendrerit saepius
-                duis.
-        </p>
+    <div data-expected="pass">
+      <p>Nobis nulla sollemnes assum est volutpat. Et ii wisi hendrerit saepius duis.</p>
+      <p>Looks like a header, but it's not.</p>
+      <p>Nobis nulla sollemnes assum est volutpat. Et ii wisi hendrerit saepius duis.</p>
     </div>
 
-    <div class="quail-test" data-expected="pass" data-accessibility-test="pNotUsedAsHeader">
-
-        <p>This is a regular paragraph</p>
+    <div data-expected="pass">
+      <p>This is a regular paragraph</p>
     </div>
 
-    </body>
+    <div data-expected="pass">
+      <p>Foo.</p>
+      <blockquote class="styled">
+        <p>Bar.</p>
+      </blockquote>
+    </div>
+
+    <div data-expected="pass">
+      <table style="font-size:12.3199996948242px; line-height:1.5em;">
+        <tbody>
+          <tr>
+            <td>
+              <p>asd</p>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+      <p><strong>foo</strong> - bar baz bom.</p>
+    </div>
+  </body>
 </html>
