--- a/test/assessmentSpecs/specs/pNotUsedAsHeader/pNotUsedAsHeader.html
+++ b/test/assessmentSpecs/specs/pNotUsedAsHeader/pNotUsedAsHeader.html
@@ -10,62 +10,62 @@
     </style>
   </head>
   <body>
-    <div data-expected="fail">
-      <p class="quail-failed-element"><b>Looks like a header</b></p>
+    <div>
+      <p id="assert-1"><b>Looks like a header</b></p>
     </div>
 
-    <div data-expected="fail">
-      <p class="quail-failed-element"><i>Looks like a header</i></p>
+    <div>
+      <p id="assert-2"><i>Looks like a header</i></p>
     </div>
 
-    <div data-expected="fail">
-      <p class="quail-failed-element"><u>Looks like a header</u></p>
+    <div>
+      <p id="assert-3"><u>Looks like a header</u></p>
     </div>
 
-    <div data-expected="fail">
-      <p class="quail-failed-element"><font>Looks like a header</font></p>
+    <div>
+      <p id="assert-4"><font>Looks like a header</font></p>
     </div>
 
-    <div data-expected="fail">
-      <p class="quail-failed-element"><em>Looks like a header</em></p>
+    <div>
+      <p id="assert-5"><em>Looks like a header</em></p>
     </div>
 
-    <div data-expected="fail">
-      <p class="quail-failed-element" style="font-weight: bold;">Looks like a header</p>
+    <div>
+      <p id="assert-6" style="font-weight: bold;">Looks like a header</p>
     </div>
 
-    <div data-expected="fail">
-      <p class="quail-failed-element"><strong>Looks like a header</strong></p>
+    <div>
+      <p id="assert-7"><strong>Looks like a header</strong></p>
     </div>
 
-    <div data-expected="pass">
-      <p>Nobis nulla sollemnes assum est volutpat. Et ii wisi hendrerit saepius duis.</p>
-      <p>Looks like a header, but it's not.</p>
-      <p>Nobis nulla sollemnes assum est volutpat. Et ii wisi hendrerit saepius duis.</p>
+    <div>
+      <p id="assert-8">Nobis nulla sollemnes assum est volutpat. Et ii wisi hendrerit saepius duis.</p>
+      <p id="assert-9">Looks like a header, but it's not.</p>
+      <p id="assert-10">Nobis nulla sollemnes assum est volutpat. Et ii wisi hendrerit saepius duis.</p>
     </div>
 
-    <div data-expected="pass">
-      <p>This is a regular paragraph</p>
+    <div>
+      <p id="assert-11">This is a regular paragraph</p>
     </div>
 
-    <div data-expected="pass">
-      <p>Foo.</p>
+    <div>
+      <p id="assert-12">Foo.</p>
       <blockquote class="styled">
-        <p>Bar.</p>
+        <p id="assert-13">Bar.</p>
       </blockquote>
     </div>
 
-    <div data-expected="pass">
+    <div>
       <table style="font-size:12.3199996948242px; line-height:1.5em;">
         <tbody>
           <tr>
             <td>
-              <p>asd</p>
+              <p id="assert-14">asd</p>
             </td>
           </tr>
         </tbody>
       </table>
-      <p><strong>foo</strong> - bar baz bom.</p>
+      <p id="assert-15"><strong>foo</strong> - bar baz bom.</p>
     </div>
   </body>
 </html>
