--- a/test/assessmentSpecs/specs/aLinkTextDoesNotBeginWithRedundantWord/aLinkTextDoesNotBeginWithRedundantWord.html
+++ b/test/assessmentSpecs/specs/aLinkTextDoesNotBeginWithRedundantWord/aLinkTextDoesNotBeginWithRedundantWord.html
@@ -4,34 +4,20 @@
     <title>aLinkTextDoesNotBeginWithRedundantWord</title>
   </head>
   <body>
-    <div class="quail-test" data-expected="pass" data-accessibility-test="aLinkTextDoesNotBeginWithRedundantWord" title="Link text">
-      <p>
-        <a href="home.html">home page</a>
-      </p>
+    <div>
+      <p><a id="assert-1" href="home.html">home page</a></p>
     </div>
 
-    <div class="quail-test" data-expected="pass" data-accessibility-test="aLinkTextDoesNotBeginWithRedundantWord" title="Image alt text">
-      <p>
-        <a href="home.html">
-          <img src="../assets/star.gif" alt="home page"/>
-        </a>
-      </p>
+    <div>
+      <p><a id="assert-2" href="home.html"><img src="assets/star.gif" alt="home page"/></a></p>
     </div>
 
-    <div class="quail-test" data-expected="fail" data-accessibility-test="aLinkTextDoesNotBeginWithRedundantWord" title="Image alt">
-      <p>
-        <a href="home.html" class="quail-failed-element">
-          <img src="../assets/star.gif" alt="link to home page"/>
-        </a>
-      </p>
+    <div>
+      <p><a id="assert-3" href="home.html">link to home page</a></p>
     </div>
 
-    <div class="quail-test" data-expected="fail" data-accessibility-test="aLinkTextDoesNotBeginWithRedundantWord" title="Link text">
-      <p>
-        <a href="home.html" class="quail-failed-element">link to home page</a>
-      </p>
+    <div>
+      <p><a id="assert-4" href="home.html"><img src="assets/star.gif" alt="link to home page"/></a></p>
     </div>
-
-
-      </body>
+  </body>
 </html>
