--- a/test/assessmentSpecs/specs/aLinksDontOpenNewWindow/aLinksDontOpenNewWindow.html
+++ b/test/assessmentSpecs/specs/aLinksDontOpenNewWindow/aLinksDontOpenNewWindow.html
@@ -5,27 +5,27 @@
 	</head>
 	<body>
 		<div data-expected="pass">
-      <p>This link to an <a href="aLinksDontOpenNewWindow.html">invalid file</a> opens in the same window.</p>
+      <p>This link to an <a id="assert-1" href="aLinksDontOpenNewWindow.html">invalid file</a> opens in the same window.</p>
 		</div>
 
 		<div data-expected="pass" title="Target is parent">
-      <p>This link to an <a href="aLinksDontOpenNewWindow.html" target="_parent">invalid file</a> opens in the same window.</p>
+      <p>This link to an <a id="assert-2" href="aLinksDontOpenNewWindow.html" target="_parent">invalid file</a> opens in the same window.</p>
 		</div>D
 
 		<div data-expected="pass" title="Target is top">
-      <a href="newwindow.html" target="_top">same window</a>
+      <a id="assert-3" href="newwindow.html" target="_top">same window</a>
 		</div>
 
 		<div data-expected="fail" title="target new">
-		  <p>This link to a <a href="aLinksDontOpenNewWindow.html" target="_new" class="quail-failed-element">valid file</a> opens in a new window.</p>
+		  <p>This link to a <a id="assert-4" href="aLinksDontOpenNewWindow.html" target="_new" class="quail-failed-element">valid file</a> opens in a new window.</p>
 		</div>
 
 		<div data-expected="pass" title="target blank with new window text">
-		  <p>This link to a <a href="aLinksDontOpenNewWindow.html" target="_blank">valid file that opens in a new window</a>.</p>
+		  <p>This link to a <a id="assert-5" href="aLinksDontOpenNewWindow.html" target="_blank">valid file that opens in a new window</a>.</p>
 		</div>
 
 		<div data-expected="pass" title="target blank with new window text in title atribute">
-		  <p>This link to a <a href="aLinksDontOpenNewWindow.html" title="valid file - opens in a new window" target="_blank">valid file</a>.</p>
+		  <p>This link to a <a id="assert-6" href="aLinksDontOpenNewWindow.html" title="valid file - opens in a new window" target="_blank">valid file</a>.</p>
 		</div>
 
 
