--- a/test/assessmentSpecs/specs/imgHasAlt/imgHasAlt.html
+++ b/test/assessmentSpecs/specs/imgHasAlt/imgHasAlt.html
@@ -4,14 +4,7 @@
 		<title>imgHasAlt</title>
 	</head>
 	<body>
-
-		<div data-expected="inapplicable"
-		data-accessibility-test="imgHasAlt">
-			<!-- no content -->
-		</div>
-
-		<div data-expected="inapplicable"
-		data-accessibility-test="imgHasAlt">
+		<div class="quail-test" data-expected="pass" data-accessibility-test="imgHasAlt">
 		  <img src="../assets/rex.jpg" style="display:none" alt="My cat"/>
 		</div>
 
@@ -23,6 +16,11 @@
 		  <img src="../assets/rex.jpg" class="quail-failed-element" />
 		</div>
 
+		<div class="quail-test" data-expected="fail" data-accessibility-test="imgHasAlt">
+			<div style="display: none">
+				<img src="../assets/rex.jpg" class="quail-failed-element" />
+			</div>
+		</div>
 
 		</body>
 </html>
