--- a/test/accessibility-tests/imgHasAlt.html
+++ b/test/accessibility-tests/imgHasAlt.html
@@ -4,13 +4,7 @@
 		<title>imgHasAlt</title>
 	</head>
 	<body>
-
-		<div class="quail-test" data-expected="inapplicable"
-		data-accessibility-test="imgHasAlt">
-			<!-- no content -->
-		</div>
-
-		<div class="quail-test" data-expected="inapplicable"
+		<div class="quail-test" data-expected="pass"
 		data-accessibility-test="imgHasAlt">
 		  <img src="../assets/rex.jpg" style="display:none" alt="My cat"/>
 		</div>
@@ -23,6 +17,11 @@
 		  <img src="../assets/rex.jpg" class="quail-failed-element" />
 		</div>
 
+		<div class="quail-test" data-expected="fail" data-accessibility-test="imgHasAlt">
+			<div style="display: none">
+				<img src="../assets/rex.jpg" class="quail-failed-element" />
+			</div>
+		</div>
 
 		<script src="../quail-testrunner.js"></script>	</body>
 </html>
