--- a/test/assessmentSpecs/specs/imgHasAlt/imgHasAlt.html
+++ b/test/assessmentSpecs/specs/imgHasAlt/imgHasAlt.html
@@ -5,22 +5,21 @@
   </head>
   <body>
     <div class="quail-test" data-expected="pass" data-accessibility-test="imgHasAlt">
-      <img src="../assets/rex.jpg" style="display:none" alt="My cat"/>
+      <img src="assets/rex.jpg" style="display:none" alt="My cat"/>
     </div>
 
     <div data-expected="pass">
-      <img src="../assets/rex.jpg" alt="My cat"/>
+      <img src="assets/rex.jpg" alt="My cat"/>
     </div>
 
     <div data-expected="fail">
-      <img src="../assets/rex.jpg" class="quail-failed-element" />
+      <img src="assets/rex.jpg" class="quail-failed-element" />
     </div>
 
     <div class="quail-test" data-expected="fail" data-accessibility-test="imgHasAlt">
       <div style="display: none">
-        <img src="../assets/rex.jpg" class="quail-failed-element" />
+        <img src="assets/rex.jpg" class="quail-failed-element" />
       </div>
     </div>
-
-    </body>
+  </body>
 </html>
