--- a/test/assessmentSpecs/specs/documentVisualListsAreMarkedUp/documentVisualListsAreMarkedUp.html
+++ b/test/assessmentSpecs/specs/documentVisualListsAreMarkedUp/documentVisualListsAreMarkedUp.html
@@ -5,8 +5,8 @@
 	<title>documentVisualListsAreMarkedUp</title>
 </head>
 <body>
-	<div data-expected="fail">
-		<p>
+	<div>
+		<p id="assert-1">
 			* chocolate
 			<br/>
 			* vanilla
@@ -18,14 +18,14 @@
 		</p>
 	</div>
 
-	<div data-expected="fail">
-		<p>
+	<div>
+		<p id="assert-2">
 			-chocolate<br class="somestuff">-vanilla<br>-cherry<br data-attribute>-bananna
 		</p>
 	</div>
 
-	<div data-expected="fail">
-		<p>
+	<div>
+		<p id="assert-3">
 			◤ chocolate
 			<br/>
 			◤ vanilla
@@ -37,8 +37,8 @@
 		</p>
 	</div>
 
-	<div data-expected="fail">
-		<p>
+	<div>
+		<p id="assert-4">
 			1. chocolate
 			<br/>
 			2. vanilla
@@ -50,8 +50,8 @@
 		</p>
 	</div>
 
-	<div data-expected="fail">
-		<p>
+	<div>
+		<p id="assert-5">
 			I. chocolate
 			<br/>
 			II. vanilla
@@ -63,8 +63,8 @@
 		</p>
 	</div>
 
-	<div data-expected="fail">
-		<p>
+	<div>
+		<p id="assert-6">
 			1) chocolate
 			<br/>
 			2) vanilla
@@ -76,8 +76,8 @@
 		</p>
 	</div>
 
-	<div data-expected="fail">
-		<p>
+	<div>
+		<p id="assert-7">
 			▶ chocolate
 			<br/>
 			* vanilla
@@ -89,33 +89,33 @@
 		</p>
 	</div>
 
-	<div data-expected="pass">
-		<p>
+	<div>
+		<p id="assert-8">
 			Our ice-cream flavours include chocolate*, vanilla*, cherry, and bananna.
 		</p>
 	</div>
 
-	<div data-expected="pass">
-		<p>
+	<div>
+		<p id="assert-9">
 			* Too short <br />
 			* May not be a list
 		</p>
 	</div>
 
-	<div data-expected="pass">
-		<p>
+	<div>
+		<p id="assert-10">
 			* Footnotes, <br />
 			** are not lists, <br />
 			*** so they should pass.
 		</p>
 	</div>
 
-	<div data-expected="pass">
+	<div>
 		<ul>
-			<li>chocolate</li>
-			<li>vanilla</li>
-			<li>cherry</li>
-			<li>bananna</li>
+			<li id="assert-11">chocolate</li>
+			<li id="assert-12">vanilla</li>
+			<li id="assert-13">cherry</li>
+			<li id="assert-14">bananna</li>
 		</ul>
 	</div>
 
