--- a/test/assessmentSpecs/specs/scriptOnFocusChangeBackgroundOrBorder/scriptOnFocusChangeBackgroundOrBorder.html
+++ b/test/assessmentSpecs/specs/scriptOnFocusChangeBackgroundOrBorder/scriptOnFocusChangeBackgroundOrBorder.html
@@ -4,18 +4,16 @@
   <title>scriptOnFocusChangeBackgroundOrBorder</title>
 </head>
 <body>
-  <div class="quail-test" data-expected="pass" data-accessibility-test="scriptOnFocusChangeBackgroundOrBorder">
+  <div data-expected="pass">
     <input name="num" value="0">
   </div>
 
-  <div class="quail-test" data-expected="pass" data-accessibility-test="scriptOnFocusChangeBackgroundOrBorder">
+  <div data-expected="pass">
     <input name="num" onfocus="jQuery(this).css('background-color', 'red');" onblur="jQuery(this).css('background-color', 'white');" value="0">
   </div>
 
-  <div class="quail-test" data-expected="fail" data-accessibility-test="scriptOnFocusChangeBackgroundOrBorder">
+  <div data-expected="fail">
     <input name="num" onfocus="jQuery(this).css('background-color', 'red');" value="0">
   </div>
-
-  <script src="../quail-testrunner.js"></script>
 </body>
 </html>
